--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ Training_Data/Practice_Training_Set.xlsx
 *__pychache__*
 
 Accuracy_results.txt
-setup/Data_Gathering/geckodriver.log
+*geckodriver.log
